--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/s3-presigned-post": "^3.556.0",
+    "aws-sdk": "^2.1605.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
