--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/credential-provider-node": "^3.556.0",
     "@aws-sdk/s3-presigned-post": "^3.556.0",
+    "@aws-sdk/s3-request-presigner": "^3.556.0",
+    "@smithy/hash-node": "^2.2.0",
+    "@smithy/protocol-http": "^3.3.0",
     "aws-sdk": "^2.1605.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
