--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "@smithy/hash-node": "^2.2.0",
     "@smithy/protocol-http": "^3.3.0",
     "aws-sdk": "^2.1605.0",
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
